Fixed alignment issues on mobile view

--- a/src/css/search-card.css
+++ b/src/css/search-card.css
@@ -209,4 +209,8 @@
   .aikb-search-card__metadata {
     align-items: flex-start;
   }
+
+  .aikb-search-card__useful-value {
+    text-align: left;
+  }
 }
